--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
             <h1>badreads</h1>
             <nav>
                 <menu>
-                    <li>index</li>
-                    <li>home</li>
-                    <li>reviews</li>
-                    <li>account</li>
+                    <li><a href="index.html">Login</a></li>
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="reviews.html">Reviews</a></li>
+                    <li><a href="account.html">Account</a></li>
                 </menu>
             </nav>
         <hr>
