Created header for home.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-            <h1>badreads</h1>
+            <h1 id="title">badreads</h1>
             <nav>
                 <menu>
                     <li><a href="index.html">Login</a></li>
