Added favicon and footer to home

--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>badreads</title>
+        <link rel="icon" href="images/badreads-favicon.avif"/>
     </head>
     <body>
         <header>
@@ -16,10 +17,15 @@
                     <li><a href="account.html">Account</a></li>
                 </menu>
             </nav>
+            <hr>
         </header>
         <main></main>
         <footer>
-
+            <hr>
+            <div>
+                <p><b>Author: </b><span>Tyler Bartschi</span></p>
+                <p><b>GitHub: </b><a href="https://github.com/tyler-bartschi/startup">Source Code</a></p>
+            </div>
         </footer>
     </body>
 </html>
