Created login fields for index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,20 @@
         <hr>
         </header>
         <main>
-
+            <h1>Welcome to badreads!</h1>
+            <form method="get" action="home.html">
+                <div>
+                    <span>Email</span>
+                    <input type="text" placeholder="youremail@gmail.com">
+                </div>
+                <div>
+                    <span>Password</span>
+                    <input type="password" placeholder="password">
+                </div>
+                <br>
+                <button type="submit">Login</button>
+                <button type="submit">Create</button>
+            </form>
         </main>
         <footer>
             <hr>
