Added the first book able to be reviewed

--- a/home.html
+++ b/home.html
@@ -19,7 +19,29 @@
             </nav>
             <hr>
         </header>
-        <main></main>
+        <main>
+            <div id="quote-of-the-day">
+                <h3>Quote of the Day</h3>
+                <p><span>Tell them hi for me. Please.</span></p>
+                <p><span>-Zachary Huckins</span></p>
+            </div>
+            <!-- eventually I want the images for each book to be on the side, and the information next to it -->
+            <div id="reviews">
+                <h3>Reviews</h3>
+                <hr>
+                <div id="book">
+                    <img id="cover-image" src="images/the-way-of-kings.jpg" alt="The Way of Kings cover" width="75px">
+                    <p id="book-title"><b>The Way of Kings</b></p>
+                    <p id="author">Author: <span>Brandon Sanderson</span></p>
+                    <!-- This is the placeholder for the WebsSocket data. This will update in real time -->
+                    <p id="average-review">Average: <span>4.5/5</span></p>
+                    <button type="submit">+ Review</button>
+                </div>
+                <hr>
+                <div id="book">
+                </div>
+            </div>
+        </main>
         <footer>
             <hr>
             <div>
