Added a form so the review button takes you to the review page

--- a/home.html
+++ b/home.html
@@ -35,7 +35,9 @@
                     <p id="author">Author: <span>Brandon Sanderson</span></p>
                     <!-- This is the placeholder for the WebsSocket data. This will update in real time -->
                     <p id="average-review">Average: <span>4.5/5</span></p>
-                    <button type="submit">+ Review</button>
+                    <form method="get" action="reviews.html">
+                        <button type="submit">+ Review</button>
+                    </form>
                 </div>
                 <hr>
                 <div id="book">
