Added the second book to home.html

--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
                     <img id="cover-image" src="images/the-way-of-kings.jpg" alt="The Way of Kings cover" width="75px">
                     <p id="book-title"><b>The Way of Kings</b></p>
                     <p id="author">Author: <span>Brandon Sanderson</span></p>
-                    <!-- This is the placeholder for the WebsSocket data. This will update in real time -->
+                    <!-- This is the placeholder for the WebSocket data. This will update in real time -->
                     <p id="average-review">Average: <span>4.5/5</span></p>
                     <form method="get" action="reviews.html">
                         <button type="submit">+ Review</button>
@@ -41,6 +41,13 @@
                 </div>
                 <hr>
                 <div id="book">
+                    <img id="cover-image" src="images/crime-and-punishment.jpg" alt="Crime and Punishment cover" width="75px">
+                    <p id="book-title"><b>Crime and Punishment</b></p>
+                    <p id="author">Author <span>Fyodor Dostoevsky</span></p>
+                    <!-- also a placeholder for WebSocket data -->
+                    <p id="average-review">Average: <span>1.5/5</span></p>
+                    <!-- &#10003 is the HTML code for a checkmark -->
+                    <button type="submit">&#10003 Reviewed</button>
                 </div>
             </div>
         </main>
