Added the reviews to the review page

--- a/reviews.html
+++ b/reviews.html
@@ -19,7 +19,58 @@
             </nav>
             <hr>
         </header>
-        <main></main>
+        <main>
+            <div>
+                <table>
+                    <tr>
+                        <td><img alt="book-cover-review" src="images/the-way-of-kings.jpg" width="150px" alt="The Way of Kings cover"></td>
+                        <td>
+                            <!-- placeholder for database data that will render the number of different reviews -->
+                            <div>
+                                <p><b>Total Ratings</b></p>
+                                <p>5 stars: <span>3</span></p>
+                                <p>4 stars: <span>1</span></p>
+                                <p>3 stars: <span>1</span></p>
+                                <p>2 stars: <span>0</span></p>
+                                <p>1 star: <span>0</span></p>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+            <h2>Reviews</h2>
+            <!-- This will use database data to render past comments -->
+            <!-- it might also use WebSocket so new comments are rendered in real time -->
+            <div id="Review">
+                <p><b>Score: </b>5/5</p>
+                <p><b>Comment: </b>This book was so good! Loved it!</p>
+                <p><b>From: </b>Tyler Bartschi</p>
+            </div>
+            <hr>
+            <div id="Review">
+                <p><b>Score: </b>5/5</p>
+                <p><b>Comment: </b>Yay!</p>
+                <p><b>From: </b>Someone</p>
+            </div>
+            <hr>
+            <div id="Review">
+                <p><b>Score: </b>5/5</p>
+                <p><b>Comment: </b>Yeah yeah.</p>
+                <p><b>From: </b>Bob</p>
+            </div>
+            <hr>
+            <div id="Review">
+                <p><b>Score: </b>4/5</p>
+                <p><b>Comment: </b>Pretty good</p>
+                <p><b>From: </b>Sam</p>
+            </div>
+            <hr>
+            <div id="Review">
+                <p><b>Score: </b>3/5</p>
+                <p><b>Comment: </b>It was pretty okay</p>
+                <p><b>From: </b>Placeholder</p>
+            </div>
+        </main>
         <footer>
             <hr>
             <div>
