Added a note to myself

--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
                 <div id="book">
                     <img id="cover-image" src="images/crime-and-punishment.jpg" alt="Crime and Punishment cover" width="75px">
                     <p id="book-title"><b>Crime and Punishment</b></p>
-                    <p id="author">Author <span>Fyodor Dostoevsky</span></p>
+                    <p id="author">Author: <span>Fyodor Dostoevsky</span></p>
                     <!-- also a placeholder for WebSocket data -->
                     <p id="average-review">Average: <span>1.5/5</span></p>
                     <!-- &#10003 is the HTML code for a checkmark -->
