--- a/account.html
+++ b/account.html
@@ -19,6 +19,7 @@
             </nav>
             <hr>
         </header>
+        <!-- add book data to reviews -->
         <main></main>
         <footer>
             <hr>
