Updated book data for the review page

--- a/reviews.html
+++ b/reviews.html
@@ -38,6 +38,12 @@
                     </tr>
                 </table>
             </div>
+            <div id="book-data">
+                <p><b>Title: </b><span>The Way of Kings</span></p>
+                <p><b>Author: </b><span>Brandon Sanderson</span></p>
+                <p><b>Summary: </b><span>--Add Summary--</span></p>
+                <p><b>Page Count: </b><span>1,280</span></p>
+            </div>
             <h2>Reviews</h2>
             <div>
                 <form>
