Added a button for the review form

--- a/reviews.html
+++ b/reviews.html
@@ -62,6 +62,7 @@
                         <input type="radio" id="one-star" name="varScore" value="1"/>
                         <label for="one-star">1</label>
                     </fieldset>
+                    <button type="submit">Submit Review</button>
                 </form>
             </div>
             <!-- This will use database data to render past comments -->
