Added the account overview section

--- a/account.html
+++ b/account.html
@@ -19,8 +19,22 @@
             </nav>
             <hr>
         </header>
-        <!-- add book data to reviews -->
-        <main></main>
+        <main>
+            <h2>Account Overview</h2>
+            <div>
+                <!-- this will pull data from the database to display your username -->
+                <p><b>Username: </b><span>--username--</span></p>
+                <h4>Your Comments</h4>
+                <hr>
+                <!-- this will pull data from the database to display your past comments -->
+                <div>
+                    <p><b>For: </b><span>The Way of Kings</span></p>
+                    <p><b>Score: </b><span>5/5</span></p>
+                    <p><b>Comment: </b><span>--user's comment goes here--</span></p>
+                </div>
+                <hr>
+            </div>
+        </main>
         <footer>
             <hr>
             <div>
