Added a form for changing the email or password

--- a/account.html
+++ b/account.html
@@ -34,6 +34,20 @@
                 </div>
                 <hr>
             </div>
+            <div>
+                <!-- use services to change the email or password to a new email or password -->
+                <h3>Change Email or Password</h3>
+                <form>
+                    <label for="change-email">Email: </label>
+                    <input type="text" placeholder="Input new email here" />
+                </form>
+                <button type="submit">Change Email</button>
+                <form>
+                    <label for="change-password">Password: </label>
+                    <input type="password" placeholder="new password"/>
+                </form>
+                <button type="submit">Change Password</button>
+            </div>
         </main>
         <footer>
             <hr>
