--- a/reviews.html
+++ b/reviews.html
@@ -41,7 +41,13 @@
             <div id="book-data">
                 <p><b>Title: </b><span>The Way of Kings</span></p>
                 <p><b>Author: </b><span>Brandon Sanderson</span></p>
-                <p><b>Summary: </b><span>--Add Summary--</span></p>
+                <p><b>Summary: </b><span>I long for the days before the Last Desolation. Before the Heralds abondoned us and the Knights Radiant turned against us. When there
+                    was still magic in Roshar and honor in the hearts of men. <br> In the end, not war but victory proved the greater test. Did our foes see that the harder 
+                    they fought, the fiercer our resistance? Fire and hammer forge a sword; time and neglect rust it away. So we won the world, yet lost it. <br> Now there 
+                    are four whom we watch: the surgeon, forced to forsake healing and fight in the most brutal war of our time; the assassin, who weeps as he kills;
+                    the liar, who wears her scholar's mantle over a thief's heart; and the prince, whose eyes open to the ancient past as his thirst for battle wanes. <br>
+                    One of them may redeem us. One of them will destory us.
+                </span></p>
                 <p><b>Page Count: </b><span>1,280</span></p>
             </div>
             <h2>Reviews</h2>
