Added some small changes

--- a/account.html
+++ b/account.html
@@ -39,7 +39,7 @@
                 <h3>Change Email or Password</h3>
                 <form>
                     <label for="change-email">Email: </label>
-                    <input type="text" placeholder="Input new email here" />
+                    <input type="text" placeholder="new email" />
                 </form>
                 <button type="submit">Change Email</button>
                 <form>
@@ -48,6 +48,8 @@
                 </form>
                 <button type="submit">Change Password</button>
             </div>
+            <hr>
+            <button type="submit">Logout</button>
         </main>
         <footer>
             <hr>
