--- a/home.html
+++ b/home.html
@@ -47,7 +47,7 @@
                     <!-- also a placeholder for WebSocket data -->
                     <p id="average-review">Average: <span>1.5/5</span></p>
                     <!-- &#10003 is the HTML code for a checkmark -->
-                    <button type="submit">&#10003 Reviewed</button>
+                    <button type="submit" disabled>&#10003 Reviewed</button>
                 </div>
             </div>
         </main>
