--- a/reviews.html
+++ b/reviews.html
@@ -26,6 +26,7 @@
                         <td><img alt="book-cover-review" src="images/the-way-of-kings.jpg" width="150px" alt="The Way of Kings cover"></td>
                         <td>
                             <!-- placeholder for database data that will render the number of different reviews -->
+                            <!-- and WebSocket will update this in real-time to reflect new reviews -->
                             <div>
                                 <p><b>Total Ratings</b></p>
                                 <p>5 stars: <span>3</span></p>
@@ -33,6 +34,7 @@
                                 <p>3 stars: <span>1</span></p>
                                 <p>2 stars: <span>0</span></p>
                                 <p>1 star: <span>0</span></p>
+                                <p><b>Average Rating: </b><span>4.5/5</span></p>
                             </div>
                         </td>
                     </tr>
