Took notes on CSS

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>badreads</title>
         <link rel="icon" href="images/badreads-favicon.avif"/>
     </head>
+    <!-- make id attributes unique, and make class attributes for CSS -->
     <body>
         <header>
             <h1 id="title">badreads</h1>
