--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>badreads</title>
         <link rel="icon" href="images/badreads-favicon.avif"/>
+        
+        <!-- Bootstrap link -->
+        <link
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+        crossorigin="anonymous"
+        />
     </head>
     <!-- make id attributes unique, and make class attributes for CSS -->
     <body>
@@ -43,5 +51,10 @@
                 <p><b>GitHub: </b><a href="https://github.com/tyler-bartschi/startup">Source Code</a></p>
             </div>
         </footer>
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+            crossorigin="anonymous"
+        ></script>
     </body>
 </html>
