--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>badreads</title>
         <link rel="icon" href="images/badreads-favicon.avif"/>
+        <link rel="stylesheet" href="main.css"/>
         
         <!-- Bootstrap link -->
         <link
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
         rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
         crossorigin="anonymous"
@@ -16,18 +17,20 @@
     </head>
     <!-- make id attributes unique, and make class attributes for CSS -->
     <body>
-        <header>
-            <h1 id="title">badreads</h1>
-            <nav>
-                <menu>
-                    <li><a href="index.html">Login</a></li>
-                    <li><a href="home.html">Home</a></li>
-                    <li><a href="reviews.html">Reviews</a></li>
-                    <li><a href="account.html">Account</a></li>
-                </menu>
-            </nav>
-        <hr>
-        </header>
+        <div class="container-fluid">
+            <header class="d-flex justify-content-center justify-content-md-between border-bottom">
+                <a href="/" class="page-title"><h1 id="title">badreads</h1></a>
+                <nav class="menu-links">
+                    <menu>
+                        <li><a href="index.html" class="text-decoration-none link-dark">Login</a></li>
+                        <li><a href="home.html">Home</a></li>
+                        <li><a href="reviews.html">Reviews</a></li>
+                        <li><a href="account.html">Account</a></li>
+                    </menu>
+                </nav>
+            <!-- <hr> -->
+            </header>
+        </div>
         <main>
             <h1>Welcome to badreads!</h1>
             <form method="get" action="home.html">
