Working on styling the header

--- a/index.html
+++ b/index.html
@@ -17,20 +17,18 @@
     </head>
     <!-- make id attributes unique, and make class attributes for CSS -->
     <body>
-        <div class="container-fluid">
-            <header class="d-flex justify-content-center justify-content-md-between border-bottom">
-                <a href="/" class="page-title"><h1 id="title">badreads</h1></a>
-                <nav class="menu-links">
-                    <menu>
-                        <li><a href="index.html" class="text-decoration-none link-dark">Login</a></li>
-                        <li><a href="home.html">Home</a></li>
-                        <li><a href="reviews.html">Reviews</a></li>
-                        <li><a href="account.html">Account</a></li>
-                    </menu>
-                </nav>
-            <!-- <hr> -->
-            </header>
-        </div>
+        <header>
+            <a href="/" class="page-title"><h1 id="title">badreads</h1></a>
+            <nav class="navbar">
+                <menu class="navbar-nav">
+                    <li class="nav-item"><a href="index.html" class="nav-link">Login</a></li>
+                    <li class="nav-item"><a href="home.html" class="nav-link">Home</a></li>
+                    <li class="nav-item"><a href="reviews.html" class="nav-link">Reviews</a></li>
+                    <li class="nav-item"><a href="account.html" class="nav-link">Account</a></li>
+                </menu>
+            </nav>
+        <!-- <hr> -->
+        </header>
         <main>
             <h1>Welcome to badreads!</h1>
             <form method="get" action="home.html">
