--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     </head>
     <!-- make id attributes unique, and make class attributes for CSS -->
     <body>
-        <header>
+        <header class="container-fluid d-flex align-items-center justify-content-around justify-content-md-between border-bottom">
             <a href="/" class="page-title"><h1 id="title">badreads</h1></a>
-            <nav class="navbar">
-                <menu class="navbar-nav">
-                    <li class="nav-item"><a href="index.html" class="nav-link">Login</a></li>
-                    <li class="nav-item"><a href="home.html" class="nav-link">Home</a></li>
-                    <li class="nav-item"><a href="reviews.html" class="nav-link">Reviews</a></li>
-                    <li class="nav-item"><a href="account.html" class="nav-link">Account</a></li>
+            <nav class="navbar justify-content-end px-4">
+                <menu class="nav mb-2">
+                    <li class="nav-item"><a href="index.html" class="nav-link px-2">Login</a></li>
+                    <li class="nav-item"><a href="home.html" class="nav-link px-2">Home</a></li>
+                    <li class="nav-item"><a href="reviews.html" class="nav-link px-2">Reviews</a></li>
+                    <li class="nav-item"><a href="account.html" class="nav-link px-2">Account</a></li>
                 </menu>
             </nav>
         <!-- <hr> -->
