Added some basic @media

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     </head>
     <!-- make id attributes unique, and make class attributes for CSS -->
     <body>
-        <header class="container-fluid d-flex align-items-center justify-content-around justify-content-md-between border-bottom">
-            <a href="/" class="page-title"><h1 id="title">badreads</h1></a>
-            <nav class="navbar justify-content-end px-4">
-                <menu class="nav mb-2">
+        <header class="container-fluid">
+            <nav class="navbar-nav ">
+                <a href="/" class="page-title"><h1 id="title">badreads</h1></a>
+                <menu class="nav">
                     <li class="nav-item"><a href="index.html" class="nav-link px-2">Login</a></li>
                     <li class="nav-item"><a href="home.html" class="nav-link px-2">Home</a></li>
                     <li class="nav-item"><a href="reviews.html" class="nav-link px-2">Reviews</a></li>
@@ -29,7 +29,7 @@
             </nav>
         <!-- <hr> -->
         </header>
-        <main>
+        <main class="container-fluid">
             <h1>Welcome to badreads!</h1>
             <form method="get" action="home.html">
                 <div>
