Got header and navigation bar working (finally)

--- a/index.html
+++ b/index.html
@@ -15,20 +15,22 @@
         crossorigin="anonymous"
         />
     </head>
-    <!-- make id attributes unique, and make class attributes for CSS -->
+
     <body>
-        <header class="container-fluid">
-            <nav class="navbar-nav ">
-                <a href="/" class="page-title"><h1 id="title">badreads</h1></a>
-                <menu class="nav">
-                    <li class="nav-item"><a href="index.html" class="nav-link px-2">Login</a></li>
-                    <li class="nav-item"><a href="home.html" class="nav-link px-2">Home</a></li>
-                    <li class="nav-item"><a href="reviews.html" class="nav-link px-2">Reviews</a></li>
-                    <li class="nav-item"><a href="account.html" class="nav-link px-2">Account</a></li>
-                </menu>
-            </nav>
-        <!-- <hr> -->
-        </header>
+        <div class="header-color">
+            <header class="container-fluid">
+                <nav>
+                    <a href="/" class="page-title"><h1>badreads</h1></a>
+                    <menu class="nav">
+                        <li class="nav-item"><a href="index.html" class="nav-link px-2 py-1 link-dark">Login</a></li>
+                        <li class="nav-item"><a href="home.html" class="nav-link px-2 py-1 link-dark">Home</a></li>
+                        <li class="nav-item"><a href="reviews.html" class="nav-link px-2 py-1 link-dark">Reviews</a></li>
+                        <li class="nav-item"><a href="account.html" class="nav-link px-2 py-1 link-dark">Account</a></li>
+                    </menu>
+                </nav>
+            <!-- <hr> -->
+            </header>
+        </div>
         <main class="container-fluid">
             <h1>Welcome to badreads!</h1>
             <form method="get" action="home.html">
