--- a/account.html
+++ b/account.html
@@ -5,21 +5,31 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>badreads</title>
         <link rel="icon" href="images/badreads-favicon.avif"/>
+        <link rel="stylesheet" href="main.css"/>
+
+        <!-- Bootstrap link -->
+        <link
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+        crossorigin="anonymous"
+        />
     </head>
     <body>
-        <header>
-            <h1 id="title">badreads</h1>
-            <nav>
-                <menu>
-                    <li><a href="index.html">Login</a></li>
-                    <li><a href="home.html">Home</a></li>
-                    <li><a href="reviews.html">Reviews</a></li>
-                    <li><a href="account.html">Account</a></li>
-                </menu>
-            </nav>
-            <hr>
-        </header>
-        <main>
+        <div class="header-color">
+            <header class="container-fluid">
+                <nav>
+                    <a href="/" class="page-title"><h1>badreads</h1></a>
+                    <menu class="nav">
+                        <li class="nav-item"><a href="index.html" class="nav-link px-2 py-1 link-dark">Login</a></li>
+                        <li class="nav-item"><a href="home.html" class="nav-link px-2 py-1 link-dark">Home</a></li>
+                        <li class="nav-item"><a href="reviews.html" class="nav-link px-2 py-1 link-dark">Reviews</a></li>
+                        <li class="nav-item"><a href="account.html" class="nav-link px-2 py-1 link-dark">Account</a></li>
+                    </menu>
+                </nav>
+            <!-- <hr> -->
+            </header>
+        </div>
             <h2>Account Overview</h2>
             <div>
                 <!-- this will pull data from the database to display your username -->
@@ -58,5 +68,10 @@
                 <p><b>GitHub: </b><a href="https://github.com/tyler-bartschi/startup">Source Code</a></p>
             </div>
         </footer>
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+            crossorigin="anonymous"
+        ></script>
     </body>
 </html>
