--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>badreads</title>
         <link rel="icon" href="images/badreads-favicon.avif"/>
         <link rel="stylesheet" href="main.css"/>
+        <link rel="stylesheet" href="index.css"/>
         
         <!-- Bootstrap link -->
         <link
@@ -30,21 +31,25 @@
                 </nav>
             </header>
         </div>
-        <main class="container-fluid">
-            <h1>Welcome to badreads!</h1>
-            <form method="get" action="home.html">
-                <div>
-                    <span>Email</span>
-                    <input type="text" placeholder="youremail@gmail.com">
-                </div>
-                <div>
-                    <span>Password</span>
-                    <input type="password" placeholder="password">
-                </div>
-                <br>
-                <button type="submit">Login</button>
-                <button type="submit">Create</button>
-            </form>
+
+        <main class="container-fluid text-center">
+            <h1 class="welcome">Welcome to <span class="welcome-title">badreads</span>!</h1>
+            <div class="login-box">
+                <form method="get" action="home.html">
+                    <div class="input-group mb-3 pt-3">
+                        <span class="input-group-text">Username</span>
+                        <input class="form-control" type="text" placeholder="your username">
+                    </div>
+                    <div class="input-group mb-3">
+                        <span class="input-group-text">Password</span>
+                        <input class="form-control" type="password" placeholder="password">
+                    </div>
+                    <div class="btn-wrapper">
+                        <button type="submit" class="btn">Login</button>
+                        <button type="submit" class="btn create-btn">Create</button>
+                    </div>
+                </form>
+            </div>
         </main>
         <footer>
             <div>
