Added stylesheet for reviews page

--- a/reviews.html
+++ b/reviews.html
@@ -6,6 +6,7 @@
         <title>badreads</title>
         <link rel="icon" href="images/badreads-favicon.avif"/>
         <link rel="stylesheet" href="main.css"/>
+        <link rel="stylesheet" href="reveiws.css"/>
 
         <!-- Bootstrap link -->
         <link
