--- a/home.html
+++ b/home.html
@@ -33,6 +33,7 @@
         </div>
 
         <main class="container-fluid">
+
             <div class="quote-wrapper">
                 <div class="quote-of-the-day">
                     <h4>Quote of the Day</h4>
@@ -40,7 +41,7 @@
                     <span class="quote-author">-Zachary Huckins</span>
                 </div>
             </div>
-            <!-- eventually I want the images for each book to be on the side, and the information next to it -->
+
             <h3>Reviews</h3>
             <div class="book" style="border-bottom: thin black solid; padding-bottom: 1em;">
                 <div class="book-wrapper">
@@ -48,11 +49,11 @@
                     <div class="book-data-wrapper">
                         <div class="book-data">
                             <p id="book-title"><b>The Way of Kings</b></p>
-                            <p id="author">Author: <span>Brandon Sanderson</span></p>
+                            <p id="author">Author: Brandon Sanderson</p>
                             <!-- This is the placeholder for the WebSocket data. This will update in real time -->
-                            <p class="average-review">Average: <span>4.4/5</span></p>
+                            <p class="average-review">Average: <span class="rating">4.4</span> / 5</p>
                         </div>
-                        <div class="button-alignment">
+                        <div>
                             <form method="get" action="reviews.html">
                                 <button class="review-button" type="submit">+ Review</button>
                             </form>
@@ -67,12 +68,12 @@
                     <div class="book-data-wrapper">
                         <div class="book-data">
                             <p id="book-title"><b>Crime and Punishment</b></p>
-                            <p id="author">Author: <span>Fyodor Dostoevsky</span></p>
+                            <p id="author">Author: Fyodor Dostoevsky</p>
                             <!-- also a placeholder for WebSocket data -->
-                            <p class="average-review">Average: <span>1.5/5</span></p>
+                            <p class="average-review">Average: <span class="rating">1.5</span> / 5</p>
                         </div>
                     
-                        <div class="button-alignment">
+                        <div>
                         <!-- &#10003 is the HTML code for a checkmark -->
                             <form>
                                 <button class="review-button disabled" type="submit" disabled>&#10003 Reviewed</button>
@@ -81,13 +82,16 @@
                     </div>
                 </div>
             </div>
+
         </main>
+
         <footer>
             <div>
                 <p><b>Author: </b><span class="dev-name">Tyler Bartschi</span></p>
                 <p><b>GitHub: </b><a href="https://github.com/tyler-bartschi/startup" class="source-link">Source Code</a></p>
             </div>
         </footer>
+
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
