--- a/reviews.html
+++ b/reviews.html
@@ -6,7 +6,7 @@
         <title>badreads</title>
         <link rel="icon" href="images/badreads-favicon.avif"/>
         <link rel="stylesheet" href="main.css"/>
-        <link rel="stylesheet" href="reveiws.css"/>
+        <link rel="stylesheet" href="review.css"/>
 
         <!-- Bootstrap link -->
         <link
@@ -30,39 +30,37 @@
                 </nav>
             </header>
         </div>
-        <main>
-            <div>
-                <table>
-                    <tr>
-                        <td><img alt="book-cover-review" src="images/the-way-of-kings.jpg" width="150px" alt="The Way of Kings cover"></td>
-                        <td>
-                            <!-- placeholder for database data that will render the number of different reviews -->
-                            <!-- and WebSocket will update this in real-time to reflect new reviews -->
-                            <div>
-                                <p><b>Total Ratings</b></p>
-                                <p>5 stars: <span>3</span></p>
-                                <p>4 stars: <span>1</span></p>
-                                <p>3 stars: <span>1</span></p>
-                                <p>2 stars: <span>0</span></p>
-                                <p>1 star: <span>0</span></p>
-                                <p><b>Average Rating: </b><span>4.5/5</span></p>
-                            </div>
-                        </td>
-                    </tr>
-                </table>
+
+        <main class="container-fluid">
+            <div class="book-wrapper">
+                <div class="image">
+                    <img alt="book-cover-review" src="images/the-way-of-kings.jpg" width="150px" alt="The Way of Kings cover">
+                </div>
+                <div class="book-data">
+                    <p><b>Title: </b>The Way of Kings</p>
+                    <p><b>Author: </b><span>Brandon Sanderson</span></p>
+                    <p><b>Page Count: </b><span>1,280</span></p>
+                </div>
+                <!-- placeholder for database data that will render the number of different reviews -->
+                <!-- and WebSocket will update this in real-time to reflect new reviews -->
+                <div class="rating-data">
+                    <p><b>Total Ratings</b></p>
+                    <p>5 stars: <span>3</span></p>
+                    <p>4 stars: <span>1</span></p>
+                    <p>3 stars: <span>1</span></p>
+                    <p>2 stars: <span>0</span></p>
+                    <p>1 star: <span>0</span></p>
+                    <p><b>Average Rating: </b><span>4.5/5</span></p>
+                </div>
             </div>
-            <div id="book-data">
-                <p><b>Title: </b><span>The Way of Kings</span></p>
-                <p><b>Author: </b><span>Brandon Sanderson</span></p>
-                <p><b>Summary: </b><span>I long for the days before the Last Desolation. Before the Heralds abondoned us and the Knights Radiant turned against us. When there
-                    was still magic in Roshar and honor in the hearts of men. <br> In the end, not war but victory proved the greater test. Did our foes see that the harder 
-                    they fought, the fiercer our resistance? Fire and hammer forge a sword; time and neglect rust it away. So we won the world, yet lost it. <br> Now there 
-                    are four whom we watch: the surgeon, forced to forsake healing and fight in the most brutal war of our time; the assassin, who weeps as he kills;
-                    the liar, who wears her scholar's mantle over a thief's heart; and the prince, whose eyes open to the ancient past as his thirst for battle wanes. <br>
-                    One of them may redeem us. One of them will destory us.
-                </span></p>
-                <p><b>Page Count: </b><span>1,280</span></p>
-            </div>
+            <p><b>Summary: </b><span>I long for the days before the Last Desolation. Before the Heralds abondoned us and the Knights Radiant turned against us. When there
+                was still magic in Roshar and honor in the hearts of men. <br> In the end, not war but victory proved the greater test. Did our foes see that the harder 
+                they fought, the fiercer our resistance? Fire and hammer forge a sword; time and neglect rust it away. So we won the world, yet lost it. <br> Now there 
+                are four whom we watch: the surgeon, forced to forsake healing and fight in the most brutal war of our time; the assassin, who weeps as he kills;
+                the liar, who wears her scholar's mantle over a thief's heart; and the prince, whose eyes open to the ancient past as his thirst for battle wanes. <br>
+                One of them may redeem us. One of them will destory us.
+            </span></p>
+            
             <h2>Reviews</h2>
             <div>
                 <form>
