Fixing image, book data, and total ratings data

--- a/reviews.html
+++ b/reviews.html
@@ -36,21 +36,25 @@
                 <div class="image">
                     <img alt="book-cover-review" src="images/the-way-of-kings.jpg" width="150px" alt="The Way of Kings cover">
                 </div>
-                <div class="book-data">
-                    <p><b>Title: </b>The Way of Kings</p>
-                    <p><b>Author: </b><span>Brandon Sanderson</span></p>
-                    <p><b>Page Count: </b><span>1,280</span></p>
+                <div class="book-data-wrapper">
+                    <div class="book-data">
+                        <p class="title">The Way of Kings</p>
+                        <p><b>Author: </b><span>Brandon Sanderson</span></p>
+                        <p><b>Page Count: </b><span>1,280</span></p>
+                    </div>
                 </div>
                 <!-- placeholder for database data that will render the number of different reviews -->
                 <!-- and WebSocket will update this in real-time to reflect new reviews -->
-                <div class="rating-data">
-                    <p><b>Total Ratings</b></p>
-                    <p>5 stars: <span>3</span></p>
-                    <p>4 stars: <span>1</span></p>
-                    <p>3 stars: <span>1</span></p>
-                    <p>2 stars: <span>0</span></p>
-                    <p>1 star: <span>0</span></p>
-                    <p><b>Average Rating: </b><span>4.5/5</span></p>
+                <div class="rating-data-wrapper">
+                    <div class="rating-data">
+                        <h4>Total Ratings</h4>
+                        <p style="padding-top: 0.5em;">5 stars: <span>3</span></p>
+                        <p>4 stars: <span>1</span></p>
+                        <p>3 stars: <span>1</span></p>
+                        <p>2 stars: <span>0</span></p>
+                        <p>1 star: <span>0</span></p>
+                        <p style="padding-top: 0.5em;"><b>Average Rating: </b><span>4.5/5</span></p>
+                    </div>
                 </div>
             </div>
             <p><b>Summary: </b><span>I long for the days before the Last Desolation. Before the Heralds abondoned us and the Knights Radiant turned against us. When there
