Finished ratings basic display

--- a/reviews.html
+++ b/reviews.html
@@ -48,12 +48,34 @@
                 <div class="rating-data-wrapper">
                     <div class="rating-data">
                         <h4>Total Ratings</h4>
-                        <p style="padding-top: 0.5em;">5 stars: <span>3</span></p>
-                        <p>4 stars: <span>1</span></p>
-                        <p>3 stars: <span>1</span></p>
-                        <p>2 stars: <span>0</span></p>
-                        <p>1 star: <span>0</span></p>
-                        <p style="padding-top: 0.5em;"><b>Average Rating: </b><span>4.5/5</span></p>
+                        <table class="data-table" >
+                            <tr>
+                                <td><span class="star">★★★★★</span></td>
+                                <td>3</td>
+                            </tr>
+                            <tr>
+                                <td><span class="star">★★★★</span></td>
+                                <td>1</td>
+                            </tr>
+                            <tr>
+                                <td><span class="star">★★★</span></td>
+                                <td>1</td>
+                            </tr>
+                            <tr>
+                                <td><span class="star">★★</span></td>
+                                <td>0</td>
+                            </tr>
+                            <tr>
+                                <td><span class="star">★</span></td>
+                                <td>0</td>
+                            </tr>
+                        </table>
+                        <!-- <p style="padding-top: 0.5em;">five stars: <span>3</span></p>
+                        <p>four stars: <span>1</span></p>
+                        <p>three stars: <span>1</span></p>
+                        <p>two stars: <span>0</span></p>
+                        <p>one star: <span>0</span></p> -->
+                        <p style="padding-top: 0.5em;"><b>Average Rating: </b><span class="rating">4.5</span> / 5</p>
                     </div>
                 </div>
             </div>
