--- a/reviews.html
+++ b/reviews.html
@@ -79,15 +79,16 @@
                     </div>
                 </div>
             </div>
-            <p><b>Summary: </b><span>I long for the days before the Last Desolation. Before the Heralds abondoned us and the Knights Radiant turned against us. When there
-                was still magic in Roshar and honor in the hearts of men. <br> In the end, not war but victory proved the greater test. Did our foes see that the harder 
-                they fought, the fiercer our resistance? Fire and hammer forge a sword; time and neglect rust it away. So we won the world, yet lost it. <br> Now there 
-                are four whom we watch: the surgeon, forced to forsake healing and fight in the most brutal war of our time; the assassin, who weeps as he kills;
-                the liar, who wears her scholar's mantle over a thief's heart; and the prince, whose eyes open to the ancient past as his thirst for battle wanes. <br>
-                One of them may redeem us. One of them will destory us.
-            </span></p>
-            
-            <h2>Reviews</h2>
+
+            <div class="summary container-fluid">
+                <h4>Summary</h4>
+                <p>I long for the days before the Last Desolation. Before the Heralds abondoned us and the Knights Radiant turned against us. When there was still magic in Roshar and honor in the hearts of men.</p>
+                <p>In the end, not war but victory proved the greater test. Did our foes see that the harder they fought, the fiercer our resistance? Fire and hammer forge a sword; time and neglect rust it away. So we won the world, yet lost it.</p>
+                <p>Now there are four whom we watch: the surgeon, forced to forsake healing and fight in the most brutal war of our time; the assassin, who weeps as he kills; the liar, who wears her scholar's mantle over a thief's heart; and the prince, whose eyes open to the ancient past as his thirst for battle wanes.</p>
+                <p>One of them may redeem us. One of them will destory us.</p>
+            </div>
+
+            <h3>Reviews</h3>
             <div>
                 <form>
                     <label for="comment">Your Review:</label>
