made accordion look good

--- a/reviews.html
+++ b/reviews.html
@@ -122,38 +122,33 @@
                     <div id="collapseReviews" class="accordion-collapse collapse show" aria-labelledby="main-heading" data-bs-parent="#collapsible-reviews">
                         <div class="accordion-body">
                             <div class="review">
-                                <!-- <p><b>Score: </b>5/5</p> -->
                                 <span class="review-star">★★★★★</span>
                                 <span class="review-comment">This book was so good! Loved it!</span>
-                                <p><b>From: </b>Tyler Bartschi</p>
+                                <span class="review-user">- Tyler</span>
                             </div>
                             <hr>
                             <div class="review">
-                                <!-- <p><b>Score: </b>5/5</p> -->
                                 <span class="review-star">★★★★★</span>
-                                <p><b>Comment: </b>Yay!</p>
-                                <p><b>From: </b>Someone</p>
+                                <span class="review-comment">Placeholder</span>
+                                <span class="review-user">- Placeholder</span>
                             </div>
                             <hr>
                             <div class="review">
-                                <!-- <p><b>Score: </b>5/5</p> -->
                                 <span class="review-star">★★★★★</span>
-                                <p><b>Comment: </b>Yeah yeah.</p>
-                                <p><b>From: </b>Bob</p>
+                                <span class="review-comment">placeholder</span>
+                                <span class="review-user">- Placeholder</span>
                             </div>
                             <hr>
                             <div class="review">
-                                <!-- <p><b>Score: </b>4/5</p> -->
                                 <span class="review-star">★★★★</span>
-                                <p><b>Comment: </b>Pretty good</p>
-                                <p><b>From: </b>Sam</p>
+                                <span class="review-comment">placeholder</span>
+                                <span class="review-user">- Placeholder</span>
                             </div>
                             <hr>
                             <div class="review">
-                                <!-- <p><b>Score: </b>3/5</p> -->
                                 <span class="review-star">★★★</span>
-                                <p><b>Comment: </b>It was pretty okay</p>
-                                <p><b>From: </b>Placeholder</p>
+                                <span class="review-comment">placeholder</span>
+                                <span class="review-user">- Placeholder</span>
                             </div>
                         </div>
                         </div>
